Salesforce/main/default/main/default/objects/Case/fields/Agricultor_acordo_com_fechamento__c.field-meta.xml
<CustomField>
    <fullName>Agricultor_acordo_com_fechamento__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Agricultor acordo com fechamento</label>
    <type>Checkbox</type>
</CustomField>