Salesforce/main/default/main/default/objects/Case/fields/Altitud_Campo__c.field-meta.xml
<CustomField>
    <fullName>Altitud_Campo__c</fullName>
    <label>Altitude Campo</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>