Salesforce/main/default/main/default/objects/Case/fields/Assunto__c.field-meta.xml
<CustomField>
    <fullName>Assunto__c</fullName>
    <label>Assunto</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Abertura de vagem</fullName>
            </value>
            <value>
                <fullName>Abortamento de vagem</fullName>
            </value>
            <value>
                <fullName>Chuva na colheita</fullName>
            </value>
            <value>
                <fullName>Deficiência nutricional</fullName>
            </value>
            <value>
                <fullName>Desenvolvimento vegetativo</fullName>
            </value>
            <value>
                <fullName>Doença</fullName>
            </value>
            <value>
                <fullName>Fitotoxicidade</fullName>
            </value>
            <value>
                <fullName>Haste verde</fullName>
            </value>
            <value>
                <fullName>Maturação</fullName>
            </value>
            <value>
                <fullName>Mistura varietal</fullName>
            </value>
            <value>
                <fullName>Morte de planta</fullName>
            </value>
            <value>
                <fullName>Nematoide</fullName>
            </value>
            <value>
                <fullName>Praga</fullName>
            </value>
            <value>
                <fullName>Qualidade de semente</fullName>
            </value>
            <value>
                <fullName>Retenção foliar</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>