Salesforce/main/default/main/default/objects/Case/fields/Contacto_Responsable__c.field-meta.xml
<CustomField>
    <fullName>Contacto_Responsable__c</fullName>
    <label>Responsável?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SIM</fullName>
            </value>
            <value>
                <fullName>NÃO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>