Salesforce/main/default/main/default/objects/Case/fields/CRM_Telefono_Assitencia_del__c.field-meta.xml
<CustomField>
    <fullName>CRM_Telefono_Assitencia_del__c</fullName>
    <formula>Asistencia_Tecnica__r.Phone</formula>
    <label>Telefone Assitencia</label>
    <type>Text</type>
</CustomField>