Salesforce/main/default/main/default/objects/Case/fields/CRM_Telefono_Contacto__c.field-meta.xml
<CustomField>
    <fullName>CRM_Telefono_Contacto__c</fullName>
    <formula>Contact.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Telefone Contato</label>
    <type>Text</type>
</CustomField>