Salesforce/main/default/main/default/objects/Case/fields/CRM_Telefono_Productor__c.field-meta.xml
<CustomField>
    <fullName>CRM_Telefono_Productor__c</fullName>
    <formula>Account.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Telefone Produtor</label>
    <type>Text</type>
</CustomField>