Salesforce/main/default/main/default/objects/Case/fields/Data_de_plantio__c.field-meta.xml
<CustomField>
    <fullName>Data_de_plantio__c</fullName>
    <description>Fecha de siembra</description>
    <label>Data de plantio</label>
    <type>Date</type>
</CustomField>