Salesforce/main/default/main/default/objects/Case/fields/Data_do_problema__c.field-meta.xml
<CustomField>
    <fullName>Data_do_problema__c</fullName>
    <label>Data do problema</label>
    <type>Date</type>
</CustomField>