Salesforce/main/default/main/default/objects/Case/fields/Detalle_Indemnizacion__c.field-meta.xml
<CustomField>
    <fullName>Detalle_Indemnizacion__c</fullName>
    <description>En este campo se detalla la indemnización que le corresponde al Multiplicador</description>
    <label>Detalhe Indenização</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>