Salesforce/main/default/main/default/objects/Case/fields/Diagnostico__c.field-meta.xml
<CustomField>
    <fullName>Diagnostico__c</fullName>
    <label>Diagnostico</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>