Salesforce/main/default/main/default/objects/Case/fields/Dosis_Producto_Tratamiento__c.field-meta.xml
<CustomField>
    <fullName>Dosis_Producto_Tratamiento__c</fullName>
    <label>Dose Produto Tratamento</label>
    <type>TextArea</type>
</CustomField>