Salesforce/main/default/main/default/objects/Case/fields/e_mail_do_agricultor__c.field-meta.xml
<CustomField>
    <fullName>e_mail_do_agricultor__c</fullName>
    <label>E-mail do agricultor</label>
    <type>Email</type>
</CustomField>