Salesforce/main/default/main/default/objects/Case/fields/Email_Assist_ncia_T_cnica__c.field-meta.xml
<CustomField>
    <fullName>Email_Assist_ncia_T_cnica__c</fullName>
    <label>E-mail Assistência Técnica</label>
    <type>Email</type>
</CustomField>