Salesforce/main/default/main/default/objects/Case/fields/Empresa__c.field-meta.xml
<CustomField>
    <fullName>Empresa__c</fullName>
    <label>Empresa</label>
    <length>50</length>
    <type>Text</type>
</CustomField>