Salesforce/main/default/main/default/objects/Case/fields/Estado__c.field-meta.xml
<CustomField>
    <fullName>Estado__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Estado del Problema</label>
    <referenceTo>Estado__c</referenceTo>
    <relationshipLabel>Estados</relationshipLabel>
    <relationshipName>Casos</relationshipName>
    <type>Lookup</type>
</CustomField>