Salesforce/main/default/main/default/objects/Case/fields/Estado_del_Problema__c.field-meta.xml
<CustomField>
    <fullName>Estado_del_Problema__c</fullName>
    <formula>Ciudad_del_Problema__r.Estado__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estado del Problema</label>
    <type>Text</type>
</CustomField>