Salesforce/main/default/main/default/objects/Case/fields/Estagio_de_desenvolvimento__c.field-meta.xml
<CustomField>
    <fullName>Estagio_de_desenvolvimento__c</fullName>
    <label>Estágio de desenvolvimento</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Germinação</fullName>
            </value>
            <value>
                <fullName>VE</fullName>
            </value>
            <value>
                <fullName>VC</fullName>
            </value>
            <value>
                <fullName>V1</fullName>
            </value>
            <value>
                <fullName>V2</fullName>
            </value>
            <value>
                <fullName>V3</fullName>
            </value>
            <value>
                <fullName>V4</fullName>
            </value>
            <value>
                <fullName>V5</fullName>
            </value>
            <value>
                <fullName>V6</fullName>
            </value>
            <value>
                <fullName>V7</fullName>
            </value>
            <value>
                <fullName>V8</fullName>
            </value>
            <value>
                <fullName>R1</fullName>
            </value>
            <value>
                <fullName>R2</fullName>
            </value>
            <value>
                <fullName>R3</fullName>
            </value>
            <value>
                <fullName>R4</fullName>
            </value>
            <value>
                <fullName>R5</fullName>
            </value>
            <value>
                <fullName>R6</fullName>
            </value>
            <value>
                <fullName>R7</fullName>
            </value>
            <value>
                <fullName>R8</fullName>
            </value>
            <value>
                <fullName>R9</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>