Salesforce/main/default/main/default/objects/Case/fields/Fecha_de_Aceptacion__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_Aceptacion__c</fullName>
    <description>Indica la fecha en que el encargado de seguir el reclamo confirma que el reclamo corresponde.</description>
    <label>Data de Aceitação</label>
    <type>Date</type>
</CustomField>