Salesforce/main/default/main/default/objects/Case/fields/Fecha_de_Asignaci_n__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_Asignaci_n__c</fullName>
    <description>Indica la fecha y hora de asignación de un reclamo</description>
    <label>Data de Atribuição pelo MKT</label>
    <type>DateTime</type>
</CustomField>