Salesforce/main/default/main/default/objects/Case/fields/Fecha_Estim_Visita_Campo__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Estim_Visita_Campo__c</fullName>
    <description>Se indica la posible fecha de Visita a Campo</description>
    <label>Data Estim Visita Campo</label>
    <type>Date</type>
</CustomField>