Salesforce/main/default/main/default/objects/Case/fields/Geolocalizacion_Campo__c.field-meta.xml
<CustomField>
    <fullName>Geolocalizacion_Campo__c</fullName>
    <description>Indica la geolocalización del campo donde se presentó el problema que generó el Reclamo.</description>
    <label>Geolocalização Campo</label>
    <scale>6</scale>
    <type>Location</type>
</CustomField>