Salesforce/main/default/main/default/objects/Case/fields/Indemnizacion__c.field-meta.xml
<CustomField>
    <fullName>Indemnizacion__c</fullName>
    <description>Indica la cantidad de indemnización</description>
    <label>Indenização</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>