Salesforce/main/default/main/default/objects/Case/fields/Indemnizacion_Aceptada__c.field-meta.xml
<CustomField>
    <fullName>Indemnizacion_Aceptada__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Este campo se pone en verdadero cuando se acepta la indemnización del reclamo</description>
    <label>Indenização Aceita</label>
    <type>Checkbox</type>
</CustomField>