Salesforce/main/default/main/default/objects/Case/fields/Irrigacion__c.field-meta.xml
<CustomField>
    <fullName>Irrigacion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Irrigação</label>
    <type>Checkbox</type>
</CustomField>