Salesforce/main/default/main/default/objects/Case/fields/Justificativa_fechamento__c.field-meta.xml
<CustomField>
    <fullName>Justificativa_fechamento__c</fullName>
    <label>Justificativa</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>