Salesforce/main/default/main/default/objects/Case/fields/Lluvias__c.field-meta.xml
<CustomField>
    <fullName>Lluvias__c</fullName>
    <label>Chuvas</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>