Salesforce/main/default/main/default/objects/Case/fields/Lote__c.field-meta.xml
<CustomField>
    <fullName>Lote__c</fullName>
    <label>Lote</label>
    <length>30</length>
    <type>Text</type>
</CustomField>