Salesforce/main/default/main/default/objects/Case/fields/Manejo_del_cultivo__c.field-meta.xml
<CustomField>
    <fullName>Manejo_del_cultivo__c</fullName>
    <label>Manejo da Lavoura</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>