Salesforce/main/default/main/default/objects/Case/fields/Marca__c.field-meta.xml
<CustomField>
    <fullName>Marca__c</fullName>
    <description>Este campo indica a que empresa corresponde el reclamo.</description>
    <label>Marca</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BRMX</fullName>
            </value>
            <value>
                <fullName>DSEM</fullName>
            </value>
            <value>
                <fullName>NEOG</fullName>
            </value>
            <value>
                <fullName>DAGMA</fullName>
            </value>
            <value>
                <fullName>LICENÇAS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>