Salesforce/main/default/main/default/objects/Case/fields/Microregion_de_Ventas__c.field-meta.xml
<CustomField>
    <fullName>Microregion_de_Ventas__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Microrregião do problema</label>
    <referenceTo>Microrregi_o_de_Vendas__c</referenceTo>
    <relationshipLabel>Reclamos</relationshipLabel>
    <relationshipName>Reclamos</relationshipName>
    <type>Lookup</type>
</CustomField>