Salesforce/main/default/main/default/objects/Case/fields/Munic_pio_assistencia_tec__c.field-meta.xml
<CustomField>
    <fullName>Munic_pio_assistencia_tec__c</fullName>
    <label>Município Assistência Técnica</label>
    <length>50</length>
    <type>Text</type>
</CustomField>