Salesforce/main/default/main/default/objects/Case/fields/Poblacion_de_plantas__c.field-meta.xml
<CustomField>
    <fullName>Poblacion_de_plantas__c</fullName>
    <label>População de plantas</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>