Salesforce/main/default/main/default/objects/Case/fields/Reclamo_Rechazado__c.field-meta.xml
<CustomField>
    <fullName>Reclamo_Rechazado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reclamo Rechazado</label>
    <type>Checkbox</type>
</CustomField>