Salesforce/main/default/main/default/objects/Case/fields/Recomendacion__c.field-meta.xml
<CustomField>
    <fullName>Recomendacion__c</fullName>
    <label>Recomendação</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>