Salesforce/main/default/main/default/objects/Case/fields/Responsavel__c.field-meta.xml
<CustomField>
    <fullName>Responsavel__c</fullName>
    <description>Asignado en base al responsable de la cuenta para cada marca</description>
    <inlineHelpText>Asignado en base al responsable de la cuenta para cada marca</inlineHelpText>
    <label>Responsável</label>
    <length>100</length>
    <type>Text</type>
</CustomField>