Salesforce/main/default/main/default/objects/Case/fields/Responsavel_pelo_atendimento__c.field-meta.xml
<CustomField>
    <fullName>Responsavel_pelo_atendimento__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Responsável pelo atendimento</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Casos</relationshipName>
    <type>Lookup</type>
</CustomField>