Salesforce/main/default/main/default/objects/Case/fields/Respuesta__c.field-meta.xml
<CustomField>
    <fullName>Respuesta__c</fullName>
    <description>Respuesta al reclamo de Venta de Basica</description>
    <label>Resolução</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>