Salesforce/main/default/main/default/objects/Case/fields/Sociedad_SF__c.field-meta.xml
<CustomField>
    <fullName>Sociedad_SF__c</fullName>
    <formula>IF(ISPICKVAL(Marca__c,&apos;BRMX&apos;), &apos;BRMX&apos;, IF(ISPICKVAL(Marca__c,&apos;DSEM&apos;),&apos;DSEM&apos;, IF(ISPICKVAL(Marca__c,&apos;NEOG&apos;),&apos;NEOG&apos;,&apos;BRMX&apos;)))</formula>
    <label>Sociedad_SF</label>
    <type>Text</type>
</CustomField>