Salesforce/main/default/main/default/objects/Case/fields/Telefone_Assistencia_Tecnica__c.field-meta.xml
<CustomField>
    <fullName>Telefone_Assistencia_Tecnica__c</fullName>
    <label>Telefone Assistência Técnica</label>
    <type>Phone</type>
</CustomField>