Salesforce/main/default/main/default/objects/Case/fields/Tipo_De_Indemnizacion__c.field-meta.xml
<CustomField>
    <fullName>Tipo_De_Indemnizacion__c</fullName>
    <label>Tipo De Indenização</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sementes</fullName>
            </value>
            <value>
                <fullName>Royalties</fullName>
            </value>
            <value>
                <fullName>Dinheiro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>