Salesforce/main/default/main/default/objects/Case/fields/Tipo_De_Reclamo__c.field-meta.xml
<CustomField>
    <fullName>Tipo_De_Reclamo__c</fullName>
    <description>Indica el tipo de reclamo</description>
    <label>Tipo De Reclamação</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Performance-Sanidade</fullName>
            </value>
            <value>
                <fullName>Qualidade do Sementes</fullName>
            </value>
            <value>
                <fullName>Qualidade de Semente-Mistura</fullName>
            </value>
            <value>
                <fullName>Preço</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>