Salesforce/main/default/main/default/objects/Case/fields/Tipo_De_Suelo__c.field-meta.xml
<CustomField>
    <fullName>Tipo_De_Suelo__c</fullName>
    <label>Tipo de Solo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Argiloso</fullName>
            </value>
            <value>
                <fullName>Arenoso</fullName>
            </value>
            <value>
                <fullName>Misto</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>