Salesforce/main/default/main/default/objects/Case/fields/Tipo_do_caso__c.field-meta.xml
<CustomField>
    <fullName>Tipo_do_caso__c</fullName>
    <label>Tipo do caso</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Caso novo</fullName>
            </value>
            <value>
                <fullName>Caso recorrente</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>