Salesforce/main/default/main/default/objects/Case/fields/Tratamiento_de_Semillas__c.field-meta.xml
<CustomField>
    <fullName>Tratamiento_de_Semillas__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica si las semillas tienen o no tratamiento</description>
    <label>Tratamento de Sementes</label>
    <type>Checkbox</type>
</CustomField>