Salesforce/main/default/main/default/objects/Case/fields/Variedade__c.field-meta.xml
<CustomField>
    <fullName>Variedade__c</fullName>
    <formula>Cultivar__r.Variedade__r.Name</formula>
    <label>Variedade</label>
    <type>Text</type>
</CustomField>