Salesforce/main/default/main/default/objects/Case/recordTypes/Fiscalizacion.recordType-meta.xml
<RecordType>
    <fullName>Fiscalizacion</fullName>
    <active>true</active>
    <businessProcess>Reclamos</businessProcess>
    <label>Fiscalização</label>
</RecordType>