Salesforce/main/default/main/default/objects/Case/recordTypes/Reclamo.recordType-meta.xml
<RecordType>
    <fullName>Reclamo</fullName>
    <active>true</active>
    <businessProcess>Reclamos</businessProcess>
    <label>Reclamo</label>
</RecordType>