Salesforce/main/default/main/default/objects/Case/recordTypes/RECLAMO_CERRADO.recordType-meta.xml
<RecordType>
    <fullName>RECLAMO_CERRADO</fullName>
    <active>true</active>
    <businessProcess>Reclamo Cerrado</businessProcess>
    <description>El reclamo se encuentra cerrado</description>
    <label>RECLAMO CERRADO</label>
</RecordType>