Salesforce/main/default/main/default/objects/Case/recordTypes/RECLAMO_COMERCIAL.recordType-meta.xml
<RecordType>
    <fullName>RECLAMO_COMERCIAL</fullName>
    <active>true</active>
    <businessProcess>Reclamo Comercial</businessProcess>
    <description>El Gerente Comercial asignó el reclamo a un responsable de Cuenta.</description>
    <label>RECLAMO COMERCIAL</label>
</RecordType>