Salesforce/main/default/main/default/objects/Case/recordTypes/RECLAMO_COMERCIAL_ACEPTADO.recordType-meta.xml
<RecordType>
    <fullName>RECLAMO_COMERCIAL_ACEPTADO</fullName>
    <active>true</active>
    <businessProcess>Reclamo Comercial Aceptado</businessProcess>
    <description>Corresponde el reclamo Comercial</description>
    <label>RECLAMO COMERCIAL ACEPTADO</label>
</RecordType>