Salesforce/main/default/main/default/objects/Case/recordTypes/RECLAMO_CON_ATEND_EN_EDICION.recordType-meta.xml
<RecordType>
    <fullName>RECLAMO_CON_ATEND_EN_EDICION</fullName>
    <active>true</active>
    <businessProcess>Reclamo Nuevo</businessProcess>
    <description>Tipo de registro de transicion entre Nuevo y En Atendimento. Es para completar datos.</description>
    <label>RECLAMO CON ATEND EN EDICION</label>
</RecordType>