Salesforce/main/default/main/default/objects/Case/recordTypes/RECLAMO_CONS_PESQUISA.recordType-meta.xml
<RecordType>
    <fullName>RECLAMO_CONS_PESQUISA</fullName>
    <active>true</active>
    <businessProcess>Reclamo en Pesquisa</businessProcess>
    <description>El Encargado del Reclamo de Desarrollo necesita una consulta técnica con Pesquisa</description>
    <label>RECLAMO CONS PESQUISA</label>
</RecordType>