Salesforce/main/default/main/default/objects/Case/recordTypes/RECLAMO_CONS_PRODUCCION.recordType-meta.xml
<RecordType>
    <fullName>RECLAMO_CONS_PRODUCCION</fullName>
    <active>true</active>
    <businessProcess>Reclamo en Producción</businessProcess>
    <description>El Encargado del Reclamo Comercial necesita una consulta técnica con Producción</description>
    <label>RECLAMO CONS PRODUCCION</label>
</RecordType>