Salesforce/main/default/main/default/objects/Case/recordTypes/RECLAMO_EN_ANDAMENTO.recordType-meta.xml
<RecordType>
    <fullName>RECLAMO_EN_ANDAMENTO</fullName>
    <active>true</active>
    <businessProcess>Reclamo en Andamento</businessProcess>
    <description>El reclamo paso de reclamo nuevo a reclamo en andamento porq es un reclamo con atendimento.</description>
    <label>RECLAMO EN ANDAMENTO</label>
</RecordType>