Salesforce/main/default/main/default/objects/Case/recordTypes/RECLAMO_NUEVO.recordType-meta.xml
<RecordType>
    <fullName>RECLAMO_NUEVO</fullName>
    <active>true</active>
    <businessProcess>Reclamo Nuevo</businessProcess>
    <description>Es la primer etapa del reclamo. El Gerente Comercial define si es un reclamo Comercial o para Desarrollo.</description>
    <label>RECLAMO NUEVO</label>
</RecordType>