Salesforce/main/default/main/default/objects/Case/recordTypes/RECLAMO_RECHAZADO.recordType-meta.xml
<RecordType>
    <fullName>RECLAMO_RECHAZADO</fullName>
    <active>true</active>
    <businessProcess>Reclamo Rechazado</businessProcess>
    <description>El reclamo no corresponde.</description>
    <label>RECLAMO RECHAZADO</label>
</RecordType>