Salesforce/main/default/main/default/objects/Case/recordTypes/RECLAMO_SIN_ATEND_EN_EDICION.recordType-meta.xml
<RecordType>
    <fullName>RECLAMO_SIN_ATEND_EN_EDICION</fullName>
    <active>true</active>
    <businessProcess>Reclamo Nuevo</businessProcess>
    <description>Tipo de registro de transicion entre Nuevo y Prop de Fechamento. Es para completar datos.</description>
    <label>RECLAMO SIN ATEND EN EDICION</label>
</RecordType>