Salesforce/main/default/main/default/objects/Case/recordTypes/RECLAMO_VISITA_CAMPO_CONF.recordType-meta.xml
<RecordType>
    <fullName>RECLAMO_VISITA_CAMPO_CONF</fullName>
    <active>true</active>
    <businessProcess>Reclamo Visita Campo Conf</businessProcess>
    <description>Se aprueba la Visita al Campo</description>
    <label>RECLAMO VISITA CAMPO CONF</label>
</RecordType>