Salesforce/main/default/main/default/objects/Case/validationRules/Indemnizacion_No_Aprobada.validationRule-meta.xml
<ValidationRule>
    <fullName>Indemnizacion_No_Aprobada</fullName>
    <active>true</active>
    <errorConditionFormula>AND($RecordType.Name = &apos;RECLAMO CERRADO&apos; ,  NOT( ISNULL( Indemnizacion__c ) )  || NOT(  ISPICKVAL(Tipo_De_Indemnizacion__c, &apos;&apos;)   ) ,  NOT( Indemnizacion_Aceptada__c ) )</errorConditionFormula>
    <errorMessage>Indenização não aprovada</errorMessage>
</ValidationRule>