Salesforce/main/default/main/default/objects/Case/validationRules/Lote.validationRule-meta.xml
<ValidationRule>
    <fullName>Lote</fullName>
    <active>false</active>
    <errorConditionFormula>AND( ISPICKVAL( Tipo_De_Reclamo__c , &apos;Qualidade do Sementes&apos;) ,LEN(Lote__c) = 0)</errorConditionFormula>
    <errorMessage>Se o Tipo de Reclamação for Qualidade de Sementes, deve-se acrescentar o Lote da Cultivar.</errorMessage>
</ValidationRule>