Salesforce/main/default/main/default/objects/Case/validationRules/Reclamo_Cerrado_Sin_Diagnostico.validationRule-meta.xml
<ValidationRule>
    <fullName>Reclamo_Cerrado_Sin_Diagnostico</fullName>
    <active>false</active>
    <errorConditionFormula>AND($RecordType.Name = &apos;RECLAMO PROPUESTA CIERRE&apos; || $RecordType.Name = &apos;RECLAMO RECHAZADO&apos;, LEN( Diagnostico__c)  =  0)</errorConditionFormula>
    <errorMessage>Não encerrar ou fechar uma reclamação sem Descrever um Diagnóstico</errorMessage>
</ValidationRule>