Salesforce/main/default/main/default/objects/Case/validationRules/Reclamo_Cerrado_sin_Fecha.validationRule-meta.xml
<ValidationRule>
    <fullName>Reclamo_Cerrado_sin_Fecha</fullName>
    <active>false</active>
    <errorConditionFormula>AND($RecordType.Name = &apos;RECLAMO PROPUESTA CIERRE&apos;, ISNULL(  Data_da_solu_o_do_caso__c ))</errorConditionFormula>
    <errorDisplayField>AssetId</errorDisplayField>
    <errorMessage>Deve ingressar uma data de Solução do Reclamo.</errorMessage>
</ValidationRule>