Salesforce/main/default/main/default/objects/Case/validationRules/Reclamo_Contactado.validationRule-meta.xml
<ValidationRule>
    <fullName>Reclamo_Contactado</fullName>
    <active>true</active>
    <errorConditionFormula>AND($RecordType.Name = &apos;RECLAMO DESARROLLO ACEPTADO&apos; || $RecordType.Name = &apos;RECLAMO COMERCIAL ACEPTADO&apos; || $RecordType.Name = &apos;RECLAMO RECHAZADO&apos;, ISNULL( Fecha_de_Contacto__c ))</errorConditionFormula>
    <errorMessage>Não Passar a reclamação para a seguinte etapa , sem entrar em contato com o Produtor.</errorMessage>
</ValidationRule>