Salesforce/main/default/main/default/objects/Case/validationRules/Responsable_no_Seleccionado.validationRule-meta.xml
<ValidationRule>
    <fullName>Responsable_no_Seleccionado</fullName>
    <active>true</active>
    <errorConditionFormula>AND($RecordType.Name = &apos;RECLAMO DESARROLLO&apos;  || $RecordType.Name = &apos;RECLAMO COMERCIAL&apos;,Responsavel__c=NULL)</errorConditionFormula>
    <errorMessage>Deve-se indicar um Responsável no Campo “Responsável”.</errorMessage>
</ValidationRule>