Salesforce/main/default/main/default/objects/Case/validationRules/Valida_Respuesta_Reclamo_VB.validationRule-meta.xml
<ValidationRule>
    <fullName>Valida_Respuesta_Reclamo_VB</fullName>
    <active>true</active>
    <description>Valida_Respuesta_Reclamo_VB</description>
    <errorConditionFormula>AND(RecordTypeId = &apos;01240000000MFFQ&apos;, ISPICKVAL(Status, &apos;Fechada&apos;), ISNULL( Respuesta__c ))</errorConditionFormula>
    <errorDisplayField>Respuesta__c</errorDisplayField>
    <errorMessage>Deve completar a Resolução do caso.</errorMessage>
</ValidationRule>