Salesforce/main/default/main/default/objects/Case/validationRules/Validar_Visita_a_Campo.validationRule-meta.xml
<ValidationRule>
    <fullName>Validar_Visita_a_Campo</fullName>
    <active>false</active>
    <errorConditionFormula>AND( $RecordType.Name = &apos;RECLAMO VISITA CAMPO CONF&apos;, ISNULL( Fecha_Visita_Campo__c) )</errorConditionFormula>
    <errorMessage>Deve completar la Fecha Visita Campo.</errorMessage>
</ValidationRule>