Salesforce/main/default/main/default/objects/Case/listViews/Reclamos_2017_18.listView-meta.xml
<ListView>
    <fullName>Reclamos_2017_18</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>NAME</columns>
    <columns>Assunto__c</columns>
    <columns>CASES.STATUS</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Data_do_problema__c</field>
        <operation>greaterThan</operation>
        <value>1/1/2017</value>
    </filters>
    <label>Reclamos 2017-18</label>
</ListView>