Salesforce/main/default/main/default/objects/Case/listViews/Reclamos_DSEM.listView-meta.xml
<ListView>
    <fullName>Reclamos_DSEM</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.ACCOUNT</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>OWNER_NAME</columns>
    <columns>Cultivar__c</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CASES.STATUS</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Marca__c</field>
        <operation>equals</operation>
        <value>DSEM</value>
    </filters>
    <label>Reclamos DSEM</label>
    <sharedTo/>
</ListView>