Salesforce/main/default/main/default/objects/Case/listViews/Reclamos_Nuevos_Brasmax.listView-meta.xml
<ListView>
    <fullName>Reclamos_Nuevos_Brasmax</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.ACCOUNT</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>OWNER_NAME</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>Cultivar__c</columns>
    <columns>CASES.STATUS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Marca__c</field>
        <operation>equals</operation>
        <value>BRMX</value>
    </filters>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.RECLAMO_NUEVO</value>
    </filters>
    <label>Reclamos Nuevos Brasmax</label>
    <sharedTo/>
</ListView>